# python-service-template

./: CHANGELOG.md  README.md  build.sh  project.cfg  pyproject.toml  run.sh  terminal.sh  test.sh
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
scripts/: entry.sh
