[tool.poetry]
name = "{{ service-name }}"
version = "0.1.0"
description = ""
authors = ["Platon Floria <platon.floria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
poetry = "^1.1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.1"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
